feat(app): 添加导航、持久化和图片加载功能
- 添加 Navigation、Room、DataStore、Coil 和 Accompanist 依赖
- 更新 AndroidManifest.xml，添加必要的权限
- 更新 build.gradle.kts，添加新功能模块的配置
- 更新 libs.versions.toml，升级 Kotlin 版本并添加新依赖版本

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- 存储权限 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
+    <!-- 媒体文件访问权限 (Android 13+) -->
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+    
+    <!-- 管理外部存储权限 (可选) -->
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +24,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AlbumClean"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
